# animations

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements-dev.txt
cmake/Modules/: ColorDiagnostics.cmake  FindCCache.cmake  FindConfigureDirectory.cmake
src/DVDBounce/: Assets.h.in  CMakeLists.txt  DVDBounce.cpp
src/MandelbrotCpu/: CMakeLists.txt  ColorPaletteVis.ipynb  Mandelbrot.cpp  color_palette.py
src/Starfield/: CMakeLists.txt  LINKS.md  Starfield.cpp
